--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@ layout: default
 
 <ul>
   <li><a href="cv.html">Click for my CV</a></li>
+  <li><a href="https://github.com/JeremCV/INF1900-17">Sample project</a></li>
 </ul>
